@@ -130,6 +130,8 @@ Optimizations
 
 * SOLR-11124: MoveReplicaCmd should skip deleting old replica in case of its node is not live (Cao Manh Dat)
 
+* SOLR-10769: Allow nodeAdded / nodeLost events to report multiple nodes in one event. (ab)
+
 Other Changes
 ----------------------
 
